--- a/contact.html
+++ b/contact.html
@@ -3,22 +3,21 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content=content="L'entreprise La chouette agence, basée à Lyon, est spécialisée dans le web design et aide les entreprises à devenir attractives et visibles sur Internet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="description" content="L'entreprise La chouette agence basée à Lyon, spécialisée dans le web design, vous invite à nous contacter pour une prochaine collaboration" <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
     <script src="./js/jquery-2.1.0.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/blocs.min.js"></script>
     <script src="./js/jqBootstrapValidation.js"></script>
     <script src="./js/formHandler.js"></script>
-    <title>page2</title>
+
+    <title>La chouette agence, Entreprise web design, Lyon</title>
 
 
     <!-- Analytics -->
@@ -47,9 +46,7 @@
                                 <a href="index.html">Accueil</a>
                             </li>
                             <li>
-                            </li>
-                            <li>
-                                <a href="page2.html">page2 &gt;</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -63,7 +60,7 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 class="text-center hero-bloc-text tc-white">
+                        <h1 class="text-center hero-bloc-text tc-white ">
                             Parlons web design !
                         </h1>
                         <p class="text-center mg-lg tc-white tight-width-whitespace">
@@ -125,7 +122,7 @@
 
 
         <!-- Footer - bloc-8 -->
-        <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+        <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
                     <div class="col-sm-12">
@@ -157,7 +154,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </footer>
         <!-- Footer - bloc-8 END -->
 
     </div>
