--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                             Parlons web design !
                         </h1>
                         <p class="text-center mg-lg tc-white tight-width-whitespace">
-                            Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br> Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+                            Nous sommes ravis que vous souhaitiez collaborer avec notre agence<br> Parlez-nous de votre projet en complétant le formulaire ci-dessous
                         </p>
                     </div>
                 </div>
