--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
 
 
     <!-- Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFJG0HQGHQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-TFJG0HQGHQ');
+    </script>
     <!-- Analytics END -->
 
 </head>
