--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,18 @@
 
 
     <!-- Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFJG0HQGHQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-TFJG0HQGHQ');
+    </script>
     <!-- Analytics END -->
 
 </head>
@@ -35,7 +46,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/logos/la-chouette-agence.webp" alt="atlanta web design logo" height="40" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
