--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="L'entreprise La chouette agence basée à Lyon, spécialisée dans le web design, vous invite à nous contacter pour une prochaine collaboration" <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="description" content="L'entreprise La chouette agence basée à Lyon, spécialisée dans le web design, vous invite à nous contacter pour une prochaine collaboration">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
