--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-
     <script src="./js/jquery-2.1.0.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/blocs.js"></script>
@@ -48,7 +47,7 @@
         <header class="bloc bgc-white l-bloc ">
             <div class="container bloc-sm navbar">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html"><img src="img/logos/la-chouette-agence.webp" alt="Logo La chouette agence à Lyon" height="40" /></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logos/la-chouette-agence.webp" alt="Logo La chouette agence " height="40" /></a>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -72,7 +71,7 @@
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
-                        <img src="img/logos/logo.webp" class="center-block image-resize-mode" width="100" alt="La chouette agence logo" />
+                        <img src="img/logos/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo la chouette agence " />
                         <h1 class="text-center hero-bloc-text tc-white ">
                             La chouette agence
                         </h1>
@@ -162,12 +161,12 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <p class="">Nous travaillons avec beaucoup de clients,<br>voici nos réalisations</p>
+                        <h2 class="">Nous travaillons avec beaucoup de clients,<br>voici nos réalisations</h2>
                     </div>
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/images/1.webp" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+                        <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/images/1.webp" alt="image la chouette agence refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" /></a>
                         <h3 class="mg-md text-center">
                             Refonte d'un site web pour un journal local
                         </h3>
@@ -176,7 +175,7 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/images/2.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+                        <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/images/2.webp" class="img-responsive portfolio-thumb" alt="image la chouette agence création d'un site web pour photographes" /></a>
                         <h3 class="mg-md text-center">
                             Création d'un site web pour photographes
                         </h3>
@@ -187,7 +186,7 @@
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/images/3.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+                        <a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/images/3.webp" class="img-responsive portfolio-thumb" alt="image la chouette agence création d'un site web pour un voyageur" /></a>
                         <h3 class="mg-md text-center">
                             Création d'un site internet pour un voyageur
                         </h3>
@@ -196,7 +195,7 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/images/4.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+                        <a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/images/4.webp" class="img-responsive portfolio-thumb" alt="image la chouette agence conception d'un site pour une agence de mariage" /></a>
                         <h3 class="mg-md text-center">
                             Conception d'un site pour une agence de mariage
                         </h3>
