--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="Entreprise webdesign Lyon, agence design Lyon, webdesigner">
     <meta name="description" content="L'entreprise La chouette agence, basée à Lyon, est spécialisée dans le web design et aide les entreprises à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
+
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
