--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Entreprise webdesign Lyon, agence design Lyon, webdesigner">
     <meta name="description" content="L'entreprise La chouette agence basée à Lyon, spécialisée dans le web design, vous invite à nous contacter pour une prochaine collaboration">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
+    <meta name="robots" content="index, follow">
 
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
