--- a/contact.html
+++ b/contact.html
@@ -97,24 +97,24 @@
                                 <label>
 							Nom
 						</label>
-                                <input id="name" class="form-control" required />
+                                <input id="name" class="form-control" title="Entrez votre nom" required />
                             </div>
                             <div class="form-group">
                                 <label>
 							Adresse email
 						</label>
-                                <input id="email" class="form-control" type="email" required />
+                                <input id="email" class="form-control" type="email" title="Entrez votre adresse email" required />
                             </div>
                             <div class="form-group">
                                 <label>
 							Comment nous avez-vous connu ?
 						</label>
-                                <input class="form-control" type="email" required id="input_504" />
+                                <input class="form-control" type="email" title="Comment nous avez-vous connu" required id="input_504" />
                             </div>
                             <div class="form-group">
                                 <label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" title="Detaillez votre projet ici" required></textarea>
                             </div>
                             <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -122,9 +122,9 @@
                         </form>
                     </div>
                     <div class="col-sm-6">
-                        <p>
-                            contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-                        </p>
+                        <p>contact@lachouetteagence.com</p>
+                        <p>2 place Sathonay 69001 Lyon</p>
+                        <p>Ouvert de 9h à 18h, du lundi au vendredi</p>
                     </div>
                 </div>
             </div>
