--- a/index.html
+++ b/index.html
@@ -237,22 +237,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" href="https://twitter.com/?lang=fr" alt="logo twitter"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" href="https://fr-fr.facebook.com/" alt="logo facebook"> <span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" href="https://dribbble.com/" alt="logo dribbble"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" href="https://www.instagram.com/?hl=fr" alt="logo instagram"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
