balise search console

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="Entreprise webdesign Lyon, agence design Lyon, webdesigner">
     <meta name="description" content="L'entreprise La chouette agence, basée à Lyon, est spécialisée dans le web design et aide les entreprises à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="google-site-verification" content="YqRsmYatbklDdx7EvFlFPirmhxpsE_9qJAJRuQrHK6A" />
     <meta name="robots" content="index, follow">
 
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -22,7 +23,6 @@
     <script src="./js/gmaps.min.js"></script>
 
     <title>La chouette agence, Entreprise web design, Lyon</title>
-
 
 
     <!-- Analytics -->
