--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <header class="bloc bgc-white l-bloc ">
             <div class="container bloc-sm navbar">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html"><img src="img/logos/la-chouette-agence.webp" alt="Logo La chouette agence " height="40" /></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logos/la-chouette-agence.webp" alt="Logo La chouette agence " /></a>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
