--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" defer>
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.min.css">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
@@ -148,22 +148,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="https://twitter.com/?lang=fr" alt="logo twitter"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" href="https://twitter.com/?lang=fr" title="logo twitter"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="https://fr-fr.facebook.com/" alt="logo facebook"> <span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" href="https://fr-fr.facebook.com/" title="logo facebook"> <span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="https://dribbble.com/" alt="logo dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" href="https://dribbble.com/" title="logo dribbble"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="https://www.instagram.com/?hl=fr" alt="logo instagram"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" href="https://www.instagram.com/?hl=fr" title="logo instagram"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
